tests/paczka1/small_fuzzy/48771437.err
Error in line 6: bvNsyMUs6 A296 16,0
Error in line 11: A959 S2_0 40,1
Error in line 13: YPiYI0PmN A296 26,4
